[package]
name = "rust_request"
version = "0.1.0"
edition = "2024"
default-run = "rust_request"

[[bin]]
name = "deps-run"
path = "src/bin/fake_main.rs"

[[bin]]
name = "rust_request"
path = "src/main.rs"

[dependencies]
hyper-util = "0.1.15"
hyper = { version = "1.6.0", features = ['full'] }
tokio = { version = "1.46.1", features = ['full'] }
http-body-util = "0.1.3"
url = "2.5.4"
serde = { version="1.0", features = ['derive'] }
random-string = "1.1.0"
serde_json = "1.0"
chrono = "0.4.41"
open = "5.3.2"
reqwest = { version = "0.13.2", features = ["form"] }
protobuf = "2.28.0"
tonic = "0.14.5"
prost = "0.14.3"
cookie = { version = "0.18.1", optional = true }
axum-extra = { version = "0.10.1", features = ["cookie"] , optional = true }
axum = { version = "0.8.4", optional = true }

[build-dependencies]
tonic-build = "0.14.5"
tonic-prost-build = "0.14.5"

[features]
browser-init = ["axum", "axum-extra", "cookie"]
